# toDoList

.github/workflows/: tests.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose-dev.yml  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 1fd6197f3edd_create_user_table.py  b68f6f733f5e_init.py  bb83afb84a46_change_password_length.py
backend/docker/: entrypoint.sh  pg_hba.conf
backend/src/: __init__.py  config.py  database.py  main.py  test_main.http
backend/src/auth/: __init__.py  auth.http  router.py  schemas.py  security.py
backend/src/models/: __init__.py  base.py  user.py
backend/src/utils/: __init__.py  database.py
backend/tests/: conftest.py  test_database.py  test_healthcheck.py
backend/tests/auth/: __init__.py  test_login.py  test_me.py  test_register.py
frontend/: package-lock.json
frontend/src/: main.jsx
frontend/src/components/: Profile.jsx  Root.jsx  ThemeSwitcher.jsx
frontend/src/css/: index.css  root.css  themeSwitcher.css
